# hello-rust

./: .gitignore  Cargo.toml  README.md  hello.rs
sample/: sample.txt
src/: main.rs
