[package]
name = "hello-rust"
version = "0.1.0"
authors = ["graham <graham@rewardops.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# todo tests https://doc.rust-lang.org/rust-by-example/cargo/test.html
# todo build scripts https://doc.rust-lang.org/rust-by-example/cargo/build_scripts.html